--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "json-loader": "^0.5.7",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "q": "^1.5.1",
+    "vue": "^2.5.13",
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
