--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "json-loader": "^0.5.7",
     "q": "^1.5.1",
     "vue": "^2.5.13",
