--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "json-loader": "^0.5.7",
     "q": "^1.5.1",
+    "reset-css": "^3.0.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4"
